themes/inbeat/assets/scss/partials/_campaign-spend.scss
#ib_campaign-spend-calculator{
    background: #FFFFFF;
    border: 1px solid #DCDCDC;
    box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.1);
    padding: 96px;
    margin-bottom: 175px;
    box-sizing: border-box;
    @include breakpoint(md-down){
      padding: 24px;
      // margin: 8px;
      .calculator-input-section{
        padding-right: 0;
      }
    }
    .calc-row {
      display: flex;
      align-items: stretch;
      flex-wrap: wrap;
      gap: 64px;
      @include breakpoint(md-down){
        gap: 24px;
      }
      .calc-col {
        flex: 1 1 0;
        min-width: 300px;
      }
    }
    .calculator-input-section{
      padding-left: 0;
      .title{
        font-weight: 500;
        font-size: 30px;
        line-height: 36px;
        letter-spacing: -0.3px;
        color: #000000;
        padding-bottom: 16px;
        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
      }
    }
    .calculator-output-wrap {
      background: #F9F7F7;
    }
    .calculator-output{
        padding: 50px 32px 50px 32px;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        height: 100%;
        box-sizing: border-box;
        @include breakpoint(md-down){
          margin-top: 24px;
          padding: 24px;
        }
        .calculation-field{
          display: flex;
          align-items: center;
          justify-content: space-between;
          padding: 50px 0px;
          border-bottom:1px solid rgba(0, 0, 0, 0.1);
          @include breakpoint(sm-down){
            padding: 36px 0px;
          }
          &:last-child{
            border-bottom: none;
            padding-bottom: 0;
            @include breakpoint(sm-down){
              padding-bottom: 24px;
            }
          }
          .calculation-wrapper{
            display: flex;
            flex-direction: column;
            gap: 4px;
            text-align: right;
            .title{
              font-weight: 400;
              font-size: 14px;
              line-height: 22px;
              color: rgba(0, 0, 0, 0.9);
              opacity: 0.5;
            }
            .value{
              font-weight: 500;
              font-size: 24px;
              line-height: 18px;
              letter-spacing: -0.004em;
              color: #000000;
            }
          }
        }
        .estimate-reach-field{
          padding-top: 0;
          .calculation-wrapper{
            .title{
              font-weight: 300;
              font-size: 14px;
              line-height: 22px;
              color: rgba(0, 0, 0, 0.9);
              opacity: 0.5;
            }
            .value{
              font-weight: 500;
              font-size: 36px;
              line-height: 42px;
              color: #000000;
              @include breakpoint(md-down){
                font-size: 32px;
              }
            }
          }
        }
    }
  }
  .mockup_dropdown-wrapper{
    // min-width: 96px;
    .input-dropdown{
      padding: 0 12px;
      gap: 8px;
      width: 50px;
      a{
        // gap: 14px;
        font-weight: 500;
        font-size: 14px;
        line-height: 36px;
        color: rgba(0, 0, 0, 0.75);
      }
      background: #F0EBEB;
      border-left: none;
      border-radius: 0px 4px 4px 0px;
      border: 1px solid #F0EBEB;
    }
  }
  .input-dropdown-wrapper{
    .mockup-dropdown{ 
      border: none !important;
      &:focus {
        border-color: transparent !important;
        background-color: #f2e7e7;
      }
    }
    .mockup-dropdown__dropdown-list{
      margin-top: 0px !important;
      top: 100% !important;
      border-radius: 0px !important;
      border: none !important;
      overflow-y: none !important;
      .list-item {
        border-radius: 0px !important;
        margin: 0px !important;
      }
    }
  }
  .influencer-type-dropdown{
   .input-dropdown{
    width: 65px;
    }
  }
  .input-dropdown-wrapper{
    display: flex;
    .ib-spend-input{
      border: 1px solid #F0EBEB;
      border-radius: 4px 0px 0px 4px;
      padding: 0px 12px;
      font-size: 14px;
      font-weight: 400;
      line-height: 24px;
      text-align: right;
      width: 50px;
      transition: $transition_default;
      color: #262626;
      cursor: pointer;
      @include breakpoint(md-down){
        width: 70px;
      }
      &::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
        color: #C4C4C4;
      }
      
      &:-ms-input-placeholder { /* Internet Explorer 10-11 */
        color: #C4C4C4;
      }
      
      &::-ms-input-placeholder { /* Microsoft Edge */
        color: #C4C4C4;
      }
      &:hover{
        border-color: #787878;
        outline: none;
      }
      &:focus{
        border-color: black;
        outline: none;
      }
    }
  }
  .sliderValue{
    position: relative;
    width: 100%;
  }
  .sliderValue span{
    position: absolute;
    top: 37px;
    width: fit-content;
    font-weight: 400;
    font-size: 12px;
    line-height: 15px;
    z-index: 2;
    color: #FFFFFF;
    background:#000000;;
    padding: 4px 6px;
    border-radius: 4px;
    text-align: center;
    transform: translateX(-50%) translateY(2px);
    opacity: 0;
    transform-origin: top;
    transition: $transition_default;
  }
  .sliderValue span.show{
    transform: translateX(-50%) translateY(0px);
    opacity: 1;
    color: #ffffff;
  }
  .sliderValue span:after{
      content: "";
      position: absolute;
      width: 0;
      height: 0;
      border-width: 10px;
      border-style: solid;
      border-color: transparent transparent #000000 transparent;
      top: -14px;
      left: 50%;
      z-index: -1;
      transform: translateX(-50%);
  }
  .field{
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    position: relative;
    
  }
  .field .value{
    position: absolute;
    font-size: 18px;
    color: #664AFF;
    font-weight: 600;
  }
  .field .value.left{
    left: -22px;
  }
/* ... */

